# PacmanMobile

./: Backtracking.cpp  Backtracking.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Lista.cpp  Lista.h  Map.cpp  Map.h  Node.cpp  Node.h  Pila.cpp  Pila.h  Player.cpp  Player.h  Pnode.cpp  Pnode.h  README.md  Score.cpp  Score.h  Socket.cpp  Socket.h  Vida.cpp  Vida.h  enemyHndlr.cpp  enemyHndlr.h  main.cpp  pathfindingA.cpp  pathfindingA.h
